Bug 1031607 - IonMonkey: Constant-fold MBoundsCheck in GVN r=jandem